# BacktestTradingStrategy

./: main.py  pyproject.toml  requirements.txt
