[project]
name = "backtesttradingstrategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.3.1",
    "streamlit>=1.50.0",
    "vectorbt>=0.28.1",
    "yfinance>=0.2.66",
]
